[重构] 收敛字节码建库主链并移除旧入口